--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.0",
     "nodemon": "^3.1.2",
     "slugify": "^1.6.6"
   },
   "scripts": {
-    "serve": "nodemon server.js"
+    "serve": "nodemon server.js",
+    "start": "nodemon index.js"
   }
 }
